AC_INIT(unbound.c)
AC_REVISION($Revision$)
AC_DEFUN(modname,[unbound])

if test x$with_[]modname != xno; then

	AC_PROG_CC
	AC_PROG_CPP

	mod_ldflags="${mod_ldflags} -lunbound"

	FR_SMART_CHECK_LIB(unbound, ub_ctx_create)
        if test "x$ac_cv_lib_unbound_ub_ctx_create" != "xyes"; then
		fail="$fail libunbound"
	fi

	FR_SMART_CHECK_INCLUDE(unbound.h)
	if test "$ac_cv_header_unbound_h" != "yes"; then
		fail="$fail unbound.h"
	fi
	targetname=modname
else
	targetname=
	echo \*\*\* module modname is disabled.
fi

if test x"$fail" != x""; then
	if test x"${enable_strict_dependencies}" = x"yes"; then
		AC_MSG_ERROR([set --without-]modname[ to disable it explicitly.])
	else
		AC_MSG_WARN([silently not building ]modname[.])
		AC_MSG_WARN([FAILURE: ]modname[ requires: $fail.]); 
		targetname=""
	fi
fi

AC_SUBST(mod_ldflags)
AC_SUBST(mod_cflags)
AC_SUBST(targetname)
AC_OUTPUT(all.mk)

